<resources>
    <string name="app_name">ChoreManager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="avatar">avatar</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_register">Create New User</string>
    <string name="newuser_title">New User</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="recover_title">Activity of Shame</string>
    <string name="action_login">Login</string>
    <string name="error_field_required">Password Recovery</string>
    <string name="prompt_color">Favorite Color (For Password Recovery)</string>
    <string name="prompt_color_dialog">Favorite Color </string>
    <string name="login_title">Chore Manager</string>
    <string name="create_user">Create New User</string>

    <string name="deadline">Deadline\n%1$s %2$d, %3$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="categories">
        <item>Materials</item>
        <item>Groceries</item>
    </string-array>
</resources>
