<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.seg2105.choremanager.CreateUser">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:fontFamily="casual"
            android:text="@string/action_register"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/AvatarSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="31dp" />

        <EditText
            android:id="@+id/UsernameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="86dp"
            android:ems="10"
            android:hint="@string/prompt_username"
            android:inputType="text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/PasswordInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/UsernameInput"
            android:layout_below="@+id/UsernameInput"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/PasswordConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/PasswordInput"
            android:layout_below="@+id/PasswordInput"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:hint="@string/prompt_confirm_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/ConfirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:onClick="createUser"
            android:text="@string/action_register" />

        <EditText
            android:id="@+id/RecoveryInput"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PasswordConfirm"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/prompt_color"
            android:inputType="text" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
